objects/Jobs__x.object
<CustomObject>
    <description>Jobs</description>
    <externalDataSource>Workday</externalDataSource>
    <externalName>Jobs</externalName>
    <fields>
        <fullName>Compensation_frequency__c</fullName>
        <description>Compensation_frequency</description>
        <externalDeveloperName>Compensation_frequency</externalDeveloperName>
        <label>Compensation_frequency</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency</description>
        <externalDeveloperName>Currency</externalDeveloperName>
        <label>Currency</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_type__c</fullName>
        <description>Employee_type</description>
        <externalDeveloperName>Employee_type</externalDeveloperName>
        <label>Employee_type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_level__c</fullName>
        <description>Grade_level</description>
        <externalDeveloperName>Grade_level</externalDeveloperName>
        <label>Grade_level</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_category__c</fullName>
        <description>Job_category</description>
        <externalDeveloperName>Job_category</externalDeveloperName>
        <label>Job_category</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_code__c</fullName>
        <description>Job_code</description>
        <externalDeveloperName>Job_code</externalDeveloperName>
        <label>Job_code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_description__c</fullName>
        <description>Job_description</description>
        <externalDeveloperName>Job_description</externalDeveloperName>
        <label>Job_description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_family__c</fullName>
        <description>Job_family</description>
        <externalDeveloperName>Job_family</externalDeveloperName>
        <label>Job_family</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_status__c</fullName>
        <description>Job_status</description>
        <externalDeveloperName>Job_status</externalDeveloperName>
        <label>Job_status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_title__c</fullName>
        <description>Job_title</description>
        <externalDeveloperName>Job_title</externalDeveloperName>
        <label>Job_title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_salary__c</fullName>
        <description>Maximum_salary</description>
        <externalDeveloperName>Maximum_salary</externalDeveloperName>
        <label>Maximum_salary</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mid_point_salary__c</fullName>
        <description>Mid_point_salary</description>
        <externalDeveloperName>Mid_point_salary</externalDeveloperName>
        <label>Mid_point_salary</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_salary__c</fullName>
        <description>Minimum_salary</description>
        <externalDeveloperName>Minimum_salary</externalDeveloperName>
        <label>Minimum_salary</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_hours__c</fullName>
        <description>Standard_hours</description>
        <externalDeveloperName>Standard_hours</externalDeveloperName>
        <label>Standard_hours</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_work_period__c</fullName>
        <description>Standard_work_period</description>
        <externalDeveloperName>Standard_work_period</externalDeveloperName>
        <label>Standard_work_period</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Jobs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Job_title__c</columns>
        <columns>Job_category__c</columns>
        <columns>Job_family__c</columns>
        <columns>Employee_type__c</columns>
        <columns>Job_status__c</columns>
        <columns>Grade_level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Jobs</pluralLabel>
</CustomObject>